# mnist-data

./: CHANGELOG.md  Main.hs  README.md  mnist-data.cabal
src/Data/: MNIST.hs
