cabal-version:       >=1.10
name:                mnist-data
version:             0.1.0.0
license-file:        LICENSE
author:              statusfailed
maintainer:          sf@statusfailed.com
copyright:           MIT
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.MNIST
  build-depends:       base >=4.12
                     , binary >= 0.8.6.0
                     , bytestring >= 0.10.8.0
  hs-source-dirs:    src
  default-language:    Haskell2010
